# YDB-aiogram-storage

./: LICENSE  README.md  example.py  pyproject.toml
aiogram_ydb_storage/: __init__.py  storage.py
